--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.0.0-rc1",
-    "angular-fire": "~0.2.0"
+    "angular-fire": "~0.2.0",
+    "jquery": "~2.0.3"
   }
 }
